--- a/package.json
+++ b/package.json
@@ -22,5 +22,16 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EMILIOMALUNGO/ProjetoFinalMobaile.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/EMILIOMALUNGO/ProjetoFinalMobaile/issues"
+  },
+  "homepage": "https://github.com/EMILIOMALUNGO/ProjetoFinalMobaile#readme",
+  "description": ""
 }
